syntax = 'proto3';

package coursePackage;

service CourseService {
    rpc isCourseActive (Course) returns (Response);
    rpc getCourse (Course) returns (Response);
}

message Course {
    string infor = 1;
}

message Response {
    string response = 1;
}